--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 
 html{
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 section{
@@ -111,7 +112,7 @@ section p{
     width: 650px;
     text-align: justify;
     position: relative;
-    left: 123px;
+    left: 75px;
     bottom: 120px;
     line-height: 22px;
 }
@@ -119,7 +120,7 @@ section p{
 section .main_btn{
     background: #fac031;
     position: relative;
-    left: 123px;
+    left: 80px;
     bottom: 30px;
     width: 150px;
     cursor: pointer;
@@ -158,7 +159,7 @@ section .main_btn:hover i{
 }
 
 .about .about_main .image img{
-    width: 800px;
+    width: 750px;
     position: relative;
     top: 60px;
 }
@@ -181,9 +182,9 @@ section .main_btn:hover i{
 }
 
 .about .about_main .about_text p{
-    width: 650px;
+    width: 630px;
     text-align: justify;
-    margin-right: 30px;
+    margin-right: 80px;
     line-height: 22px;
 }
 
@@ -193,8 +194,8 @@ section .main_btn:hover i{
     text-decoration: none;
     color: #fff;
     position: relative;
-    left: 55%;
-    bottom: 30px;
+    left: 52%;
+    bottom: 60px;
 }
 
 
@@ -239,8 +240,8 @@ section .main_btn:hover i{
 }
 
 .menu .menu_box .menu_card{
-    width: 325px;
-    height: 480px;
+    width: 300px;
+    height: 510px;
     padding-top: 10px;
     margin-bottom: 20px;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
@@ -309,9 +310,10 @@ section .main_btn:hover i{
 }
 
 .menu .menu_box .menu_card .menu_info p{
-    text-align: center;
+    text-align: justify;
     margin-top: 8px;
     line-height: 21px;
+    padding: 10px;
 }
 
 .menu .menu_box .menu_card .menu_info h3{
@@ -547,7 +549,7 @@ section .main_btn:hover i{
 }
 
 .review .review_box .review_card .review_text p{
-    text-align: center;
+    text-align: justify;
     line-height: 22px;
     transition: 0.3s;
 }
@@ -563,7 +565,7 @@ section .main_btn:hover i{
 .order{
     width: 100%;
     height: 100vh;
-    padding: 70px 0;
+    padding: 200px 0 70px 0;
     background-image: url(image/bg2.jpg);
     background-size: cover;
     background-position: center;
@@ -652,6 +654,7 @@ section .main_btn:hover i{
     background-image: url(image/bg1.jpg);
     background-size: cover;
     background-position: center;
+    margin-top: 200px;
 }
 
 .team h1{
